Improved Material Node Editor

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 21.731544494628906,
-            "y": 30.89748191833496,
-            "z": 32.4770622253418
+            "x": -26.450071334838867,
+            "y": 12.201571464538574,
+            "z": -3.125218391418457
         },
         "projection": 0,
         "target": {
-            "x": -12.048904418945313,
-            "y": -3.9093265533447266,
-            "z": 20.337169647216797
+            "x": 21.183393478393555,
+            "y": -2.096024513244629,
+            "z": 2.037672519683838
         },
         "type": "camera",
         "up": {
@@ -57,15 +57,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.6240000128746033,
+            "DiffuseIntensity": 1.0,
             "Roughness": 100.0,
             "SpecularIntensity": 4.27400016784668,
             "SpecularTint": {
-                "x": 0.5250965356826782,
-                "y": 0.29194557666778564,
-                "z": 0.0
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
             },
-            "shininess": 5.127999782562256
+            "shininess": 0.0
         },
         "texture_path": "project/game/textures/metal grid/metalgrid2_basecolor.png",
         "type": "entity"
@@ -80,14 +80,14 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.4000000059604645,
-            "y": 0.4000000059604645,
-            "z": -0.4000000059604645
+            "x": 0.20800000429153442,
+            "y": -0.32499998807907104,
+            "z": -0.05900000035762787
         },
-        "id": 8096,
-        "intensity": 0.5,
+        "id": 8098,
+        "intensity": 0.9169999957084656,
         "isChild": false,
-        "light_type": 1,
+        "light_type": 0,
         "name": "",
         "position": {
             "x": 4.0,
@@ -101,9 +101,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 0,
-            "y": 0,
-            "z": 0
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "light"
     }
